# SwitchBot-test

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/cpp/switchbot/: ._CMakeLists.txt  ._CMakeLists.txt.linux  ._CMakeLists.txt.raspi  CMakeLists.txt  CMakeLists.txt.linux  README  device_list.json  device_list_lint.json  get_device_list.sh  switchbot.cpp  switchbot_open_token.txt  switchbot_py3.py
examples/cpp/write/: write.cpp
readme/: ._README.html  README.html  README.md
